--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,63 @@
 <html dir="ltr" lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0"
+    />
     <title>Stencil Component Starter</title>
+
+    <link
+      href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css"
+      rel="stylesheet"
+    />
 
     <script type="module" src="/build/headlessui-webcomponents.esm.js"></script>
     <script nomodule src="/build/headlessui-webcomponents.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js"
+      defer
+    ></script>
   </head>
-  <body>
+  <body class="px-8 container mx-auto">
+    <h1 class="text-2xl mt-8">
+      Unofficial Headless UI Experimental port to Web Components
+    </h1>
+    <main>
+      <section class="mt-8">
+        <h2 class="text-xl">Switch</h2>
+        <form action="test">
+          <div class="mt-6" x-data-defer="{ isChecked: true }">
+            <h-switch
+              class="flex items-center space-x-4"
+              :checked="isChecked"
+              @switched="isChecked = !isChecked"
+            >
+              <label label>Enable notifications</label>
+              <button
+                button
+                class="relative inline-flex flex-shrink-0 h-6 transition-colors duration-200 ease-in-out border-2 border-transparent rounded-full cursor-pointer w-11 focus:outline-none focus:ring"
+                :class="[ isChecked ? 'bg-indigo-600' : 'bg-gray-200' ]"
+              >
+                <span
+                  class="inline-block w-5 h-5 transition duration-200 ease-in-out transform bg-white rounded-full"
+                  :class="[ isChecked ? 'translate-x-5' : 'translate-x-0' ]"
+                ></span>
+              </button>
+            </h-switch>
+          </div>
+        </form>
+      </section>
+    </main>
+    <script>
+      const components = document.querySelectorAll('[x-data-defer]');
+      components.forEach(comp => {
+        comp.addEventListener('componentRendered', function handleConnected() {
+          comp.setAttribute('x-data', comp.getAttribute('x-data-defer'));
+          Alpine.initializeComponent(comp);
+          comp.removeEventListener('componentRendered', handleConnected);
+        });
+      });
+    </script>
   </body>
 </html>
